<resources>
    <string name="app_name">X vs 0</string>


        <string name="playerOne">Player 1</string>
        <string name="playerTwo">Player 2</string>
        <string name="noWinner">Durrang</string>
        <string name="oneWinner">G`olib 1</string>
        <string name="twoWinner">G`olib 2</string>
        <string name="status">Natija</string>
        <string name="playAgain">Yana</string>
        <string name="reset">Boshidan</string>
        <string name="changeImage">Rasm</string>




    <!--    <string name="playerOne">Player-1 Score</string>-->
<!--    <string name="playerTwo">Player-2 Score</string>-->
<!--    <string name="noWinner">No Winner</string>-->
<!--    <string name="oneWinner">Player-1 has won</string>-->
<!--    <string name="twoWinner">Player-2 has won</string>-->
<!--    <string name="status">Status</string>-->
<!--    <string name="playAgain">Play again</string>-->
<!--    <string name="reset">Reset</string>-->
<!--    <string name="changeImage">Change image</string>-->


</resources>