<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:scaleType="centerCrop"
    android:background="@drawable/img"
    android:layout_margin="0dp">

    <TextView
        android:id="@+id/texttitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="#cc1234"
        android:fontFamily="cursive"
        />

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/texttitle"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/text_player1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/playerOne"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/text_player2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/playerTwo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:layout_toRightOf="@id/text_player1"
            />
        <TextView
            android:id="@+id/text_score1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:layout_below="@id/text_player1"
            />
        <TextView
            android:id="@+id/text_score2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/text_color"
            android:textAlignment="center"
            android:layout_below="@id/text_player2"
            android:layout_toRightOf="@id/text_player1"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/relative_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn0"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>

            <Button
                android:id="@+id/btn1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>

            <Button
                android:id="@+id/btn4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>
            <Button
                android:id="@+id/btn5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"

                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25sp"/>

            <Button
                android:id="@+id/btn7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>
            <Button
                android:id="@+id/btn8"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:textSize="26sp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="1.25dp"/>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_linear"
        android:layout_marginTop="20sp"
        android:layout_centerHorizontal="true"
        android:textSize="26sp"
        android:fontFamily="cursive"
        android:text="@string/status"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textStatus"
        android:layout_centerHorizontal="true"
        android:text="@string/playAgain"
        android:textSize="26sp"
        android:backgroundTint="#ffbb00"/>


    <Button
        android:id="@+id/btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_play_again"
        android:layout_centerHorizontal="true"
        android:text="@string/reset"
        android:backgroundTint="#cc1234"/>

    <Button
        android:id="@+id/change_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_reset"
        android:layout_centerHorizontal="true"
        android:text="@string/changeImage"
        android:backgroundTint="#ff120470"/>


</RelativeLayout>